Update enable_garbage_collection_logging.md