@@ -1,2 +1,5 @@
 # Enable Garbage Collection Logging
 
+JVM opt = "-verbose:gc -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=10M -Xloggc:/var/log/XXX/gc.log"
+
+
